custom-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testing
  labels:
    area: testing


# kubectl apply -f custom-ns.yaml
# kubectl get ns
