env-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mydbPod
spec:
  containers:
    - name: mydatabase
      image: mysql:latest
