firstpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80

# -----------------commands-----------------------#

# kubectl create -f firstpod.yaml
# kubeclt get pods
