probes.yaml
# types of Probes that way to revcover from application failure. | startup Probe | Readines Probe | liveness Probe
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        startupProbe:
          exec:
            command:
            - cat
            - /var/www/html/index.html
          initialDelaySeconds: 5
        readinessProbe:
          exec:
            command:
            - cat
            - /var/www/html/index,hml
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 2
          successThreshold: 1
        livenessProbe:
          exec:
            command:
            - cat
            - /var/www/html/index.html
          initialDelaySeconds: 5
          periodSeconds: 2
          failureThreshold: 4
          successThreshold: 1
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-deployment
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
