network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: production-network-policy
  namespace: production
spec:
  podSelector:
    matchLabels:
      app: production-one
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: dev
    - podSelector:
        matchLabels:
          app: development-one
    ports:
    - protocol: TCP
      port: 80
